the rest of Monday's class.

--- a/nov23/Nov-23Class.tex
+++ b/nov23/Nov-23Class.tex
@@ -51,7 +51,7 @@
 \begin{document}
 \begin{center}
 {\bf NE 250, F15\\
-November 22, 2015 
+November 23, 2015 
 }
 \end{center}
 
@@ -151,7 +151,7 @@ Next, we add the two half-point equations together:
 \end{align*}
 and get the diamond difference relation.
 
-\textbf{sweep pattern and boundary conditions}\\
+\textbf{Sweep pattern and boundary conditions}\\
 We solve these equation in the direction of neutron flow by doing a mesh ``sweep". \\
 We march through $i = 0, 1, \dots, I$ when $\mu_n > 0$. This is the direction of information transfer and maintains stability of our solution.\\
 We march through $i = I, I-1, \dots, 0$ when $\mu_n < 0$ for the same reason.
@@ -203,80 +203,155 @@ NOTE: we don't actually create and store this matrix, however. Because we only d
 When we have one reflecting boundary, we can write our matrix equations as $\mathbf{L}\mathbf{\psi}^{m+1} = \mathbf{q}^m$.\\
 When we have two reflecting boundaries, we get $\mathbf{L}\mathbf{\psi}^{m+1} = \mathbf{q}^m + \mathbf{U}\mathbf{\psi}^{m}$, where $\mathbf{U}$ is a strictly upper triangular matrix that operates on the flux from the previous iterate that has been ``reflected" off of the boundary.
 
-\textbf{Local Truncation Error}\\
+\textbf{Spatial Truncation Error}\\
+We can see the effect of the truncation error ir we look at uncollided neutrons with a zero group source:
+\[
+\mu_n \frac{d \psi_n}{dx} + \Sigma_t \psi_n(x) = 0\:,
+\]
+where the cross section is taken as constant. For neutrons moving $\mu_n > 0$, the solution is
+\[
+\psi_n(x') = \psi_n(x)\exp\bigl(\frac{-\Sigma (x'-x)}{\mu_n}\bigr)\:, \quad x' > x \:.
+\]
+For a uniform grid, the exact expression for $\psi_{n,i+1/2}$ is (the exponential behavior across the cell without a source)
+\[
+\psi_{n,i+1/2} = e^{-2h} \psi_{n,i-1/2}\:, \qquad h \equiv \frac{\Sigma \Delta}{2|\mu_n|} \:.
+\]
+To see the error, we figure out how this exact expression translates into the diamond difference approximation:
+\[
+\psi_{n,i+1/2} = \frac{1 - h}{1 + h}\psi_{n,i-1/2}\:,
+\]
+which approximates the power series expansion of the exponential exactly through the $h^2$ term (consistent with our original flux expansion). 
 
-
-
+Now we can see where DD limits us. If $h < 1$, we can get non-physical negative flux values. \\
+We would like to use space-angle meshes that keep $h<<1$, but that can be prohibitively expensive. \\
+We can get a condition for positivity (recognizing that $\mu_1$ is ordered as the smallest angle) that is 
+\[
+\frac{\Sigma \Delta}{2|\mu_n|} < 1 \:, \quad \rightarrow \quad \Sigma \Delta = \frac{\Delta}{\lambda} < 2 \mu_1\:.
+\]
+As we refine our angle set we must correspondingly choose smaller meshes to keep this condition of positivity.\\
+Fortunately, there are other spatial solution methods and/or negative flux ``fixups" we can use to deal with this, but we're going to talk about other dimensions first. 
 
 \textbf{Spatial Discretization in Multi-D} (L\&M 4.3)\\
-\begin{minipage}{0.5\textwidth}
+In multiple dimensions, we'll working with
+\[
+\vOmega_n \cdot \nabla \psi_n(\vec{r}) + \Sigma_t(\vec{r})\psi_n(\vec{r}) = q_n(\vec{t})\:,
+\]
+where $q_n$ includes scattering, fixed source, and/or fission. We will next discretize the space:
+
+\begin{center}
 \begin{tikzpicture}
-\draw (0,0)--(0,7);
-\draw (1,0)--(1,7);
-\draw (2,0)--(2,7);
-\draw (3,0)--(3,7);
-\draw (4,0)--(4,7);
-\draw (5,0)--(5,7);
-\draw (6,0)--(6,7);
-\draw (7,0)--(7,7);
-\node[below] at (0,-.25) {$x_0$};
-\node[below] at (1,-.25) {$x_1$};
-\node[below] at (3,-.25) {$x_{i-1}$};
-%\node[above] at (3.5, .25) {$x_{i-1/2}$};
-\node[below] at (4,-.25) {$x_i$};
-%\node[above] at (4.5, .25) {$x_{i+1/2}$};
-\node[below] at (5,-.25) {$x_{i+1}$};
-\node[below] at (7,-.25) {$x_I$};
-\node at (3.5, 2.5) {$\Delta x_i$};
+\draw (0,0)--(0,9);
+\draw (.75,-.1)--(.75,.1);
+\draw (1.5,0)--(1.5,9);
+\draw (3,0)--(3,9);
+\draw (4.5,0)--(4.5,9);
+\draw (5.25,-.1)--(5.25,.1);
+\draw (6,0)--(6,9);
+\draw (7.5,0)--(7.5,9);
+\draw (8.25,-.1)--(8.25,.1);
+\draw (9,0)--(9,9);
+\node[below] at (0,-.25) {$x_{1/2}$};
+\node[above] at (.75,.25) {$x_1$};
+\node[below] at (1.5,-.25) {$x_{3/2}$};
+\node[below] at (3,-.25) {$\dots$};
+\node[below] at (4.5,-.25) {$x_{i-1/2}$};
+\node[above] at (5.25,.25) {$x_{i}$};
+\node[below] at (6,-.25) {$x_{i+1/2}$};
+\node[above] at (8.25,.25) {$x_{I}$};
+\node[below] at (9,-.25) {$x_{I+1/2}$};
+\node at (5.25, 2.25) {$\Delta x_i$};
 % begin y
-\draw (0,0)--(7,0);
-\draw (0,1)--(7,1);
-\draw (0,2)--(7,2);
-\draw (0,3)--(7,3);
-\draw (0,4)--(7,4);
-\draw (0,5)--(7,5);
-\draw (0,6)--(7,6);
-\draw (0,7)--(7,7);
-\node[left] at (-.25, 0) {$y_0$};
-\node[left] at (-.25,1) {$y_1$};
-\node[left] at (-.25,3) {$y_{j-1}$};
-\node[left] at (-.25,4) {$y_j$};
-\node[left] at (-.25,5) {$y_{j+1}$};
-\node[left] at (-.25,7) {$y_J$};
-  \node at (2.5,3.5) {$\Delta y_j$};
-% labels
-\node at (4,4) [circle,fill=black,scale=0.3] {};
-\node[below left] at (4,4) {$i,j$};
-\node at (5,4) [circle,fill=black,scale=0.3] {};
-\node[below right] at (5,4) {$i+1,j$};
-\node at (3,4) [circle,fill=black,scale=0.3] {};
-\node[above left] at (3,4) {$i-1,j$};
-\node at (4,5) [circle,fill=black,scale=0.3] {};
-\node[above right] at (4,5) {$i,j+1$};
-\node at (4,3) [circle,fill=black,scale=0.3] {};
-\node[below right] at (4,3) {$i,j-1$};
+\draw (0,0)--(9,0);
+\draw (-.1,.75)--(.1,.75);
+\draw (0,1.5)--(9,1.5);
+\draw (0,3)--(9,3);
+\draw (0,4.5)--(9,4.5);
+\draw (-.1,5.25)--(.1,5.25);
+\draw (0,6)--(9,6);
+\draw (0,7.5)--(9,7.5);
+\draw (-.1,8.25)--(.1,8.25);
+\draw (0,9)--(9,9);
+\node[left] at (-.25, 0) {$y_{1/2}$};
+\node[left] at (-.25,.75) {$y_1$};
+\node[left] at (-.25,1.5) {$y_{1+1/2}$};
+\node[left] at (-.25,3) {$\vdots$};
+\node[left] at (-.25,4.5) {$y_{j-1/2}$};
+\node[left] at (-.25,5.25) {$y_{j}$};
+\node[left] at (-.25,6) {$y_{j+1/2}$};
+\node[left] at (-.25,8.25) {$y_J$};
+\node[left] at (-.25,9) {$y_{J+1/2}$};
+\node at (2.25,5.25) {$\Delta y_j$};
 \end{tikzpicture}
-\end{minipage} \hfill
+\end{center}
+We try to match up material boundaries as best we can, and then we have to homogenize and make approximations in places where that doesn't work.
+
+We need to define edge-averaged and cell-averaged fluxes as well as boundary conditions:
+\begin{align*}
+\psi_{n,i\pm1/2,j} &\equiv \frac{1}{\Delta y_{j}} \int_{y_{j-1/2}}^{y_{j+1/2}} dy\: \psi_n(x_{i\pm1/2}, y) \quad \text{left or right face}\\
+\psi_{n,i,j\pm1/2} &\equiv \frac{1}{\Delta x_{i}} \int_{x_{i-1/2}}^{x_{i+1/2}} dx\: \psi_n(x, y_{j\pm1/2}) \quad \text{top or bottom face}\\
+\psi_{n,i,j} &= \frac{1}{\Delta x_i \Delta y_j} \int_{x_{i-1/2}}^{x_{i+1/2}} dx \int_{y_{j-1/2}}^{y_{j+1/2}} dy\: \psi_n(x,y)
+&\\
+\text{left: }\:&\psi_{n,1/2,j} = \psi_{n,j}(a_0)\:, \quad \mu_n > 0\:, \quad j = 1, 2, \dots, J \\
+\text{right: }\:&\psi_{n,I+1/2,j} = \psi_{n,j}(a_1)\:, \quad \mu_n < 0\:, \quad j = 1, 2, \dots, J \\
+\text{bottom: }\:&\psi_{n,i,1/2} = \psi_{n,i}(b_0)\:, \quad \eta_n > 0\:, \quad i = 1, 2, \dots, I \\
+\text{right: }\:&\psi_{n,i,J+1/2} = \psi_{n,i}(b_1)\:, \quad \eta_n < 0\:, \quad i = 1, 2, \dots, I 
+\end{align*}
 %
-\begin{minipage}{0.5\textwidth}
-  \[u(x_i,y_j) = u_{i,j} \qquad u(x_{i+1},y_j) = u_{i+1,j}\]
-  \begin{align}
-  \frac{\partial^2 u_{i,j}}{\partial x^2} = \frac{\partial}{\partial x}\bigl(\frac{\partial u_{i,j}}{\partial x}\bigr) =
-\frac{u_{i-1,j} - 2u_{i,j} + u_{i+1,j}}{\Delta x_i^2} \nonumber \\
-%
-  \frac{\partial^2 u_{i,j}}{\partial y^2} = \frac{\partial}{\partial y}\bigl(\frac{\partial u_{i,j}}{\partial y}\bigr) =
-\frac{u_{i,j-1} - 2u_{i,j} + u_{i,j+1}}{\Delta y_j^2} \nonumber
-\end{align}
-\end{minipage}
-
-- boundary conditions and sweeping  pattern\\
-- quick mention of other spatial methods and their properties
+We then derive the balance relation by integrating the TE over the xy-cell:
+\[
+\frac{\mu_n}{\Delta x_i}\bigl(\psi_{n,i+1/2,j} - \psi_{n,i-1/2,j}\bigr) + \frac{\eta_n}{\Delta y_i}\bigl(\psi_{n,i,j+1/2} - \psi_{n,i,j-1/2}\bigr) + \Sigma_{t,i,j} \psi_{n,i,j} = q_{n,i,j} 
+\]
+This equation, as the previous balance one, contains no approximations yet. 
 
 
-rest of course (3 classes left):\\
-- M, 11/23: equation solution procedures (inner iteration, outer iteration, eigenvalue iteration, convergence); one basic solver of each type (SI, GS, PI)\\ 
-- M, 11/30: example of research into a different solver for each type (block Krylov, RQI)
-- W, 12/02: choice preconditioners? computing architectures? some topic we skipped? Last half of class will be feedback and discussion of class.
+We've not got 3 sets of variables: 1 set of x-averaged, 1 set of y-averaged, and one set of cell-averaged; but we only have one set of equations.\\
+We do a 2-D Taylor series expansion to define our cell-centered flux, which causes us not to be exact:
+\begin{align*}
+\psi_n(x,y) &= \psi_n(x_i,y_j) + (x-x_i)\frac{d\psi_n}{dx}|_{x_i,y_j} + (y-y_j)\frac{d\psi_n}{dy}|_{x_i,y_j} + O(\Delta_{i,j})^2\\
+\psi_{n,i,j} &= \psi_n(x_i,y_j) + O(\Delta_{i,j})^2
+\end{align*}
+We now need two diamond-difference relations, which we obtain the same way we did before, giving:
+\begin{align*}
+\psi_{n,i+1/2,j} + \psi_{n,i-1/2,j} &= 2\psi_{n,i,j} + O(\Delta_{i,j})^2\\
+\psi_{n,i,j+1/2} + \psi_{n,i,j-1/2} &= 2\psi_{n,i,j} + O(\Delta_{i,j})^2
+\end{align*}
+
+\textbf{Sweep pattern and boundary conditions}\\
+To conduct the sweep we have to sweep through each octant. We often go
+\begin{enumerate}
+\item left-to-right, bottom-to-top: $\mu_n > 0\:, \:\: \eta_n > 0$
+\item right-to-left, bottom-to-top: $\mu_n < 0\:, \:\: \eta_n > 0$
+\item left-to-right, top-to-bottom: $\mu_n > 0\:, \:\: \eta_n < 0$
+\item right-to-left, top-to-bottom: $\mu_n < 0\:, \:\: \eta_n < 0$
+\end{enumerate}
+One mesh sweep constitutes all angles, all cells, all quadrants. 
+
+We can write the mesh sweep procedure generically using out and in designators, and then you can figure out which you need depending on which angle you are using:
+
+\begin{align*}
+\psi_{n,out,j} &= 2\psi_{n,i,j} - \psi_{n,in,j}\:; \qquad \mu_n > 0\:\:\psi_{n,out,j} = \psi_{n,i+1/2,j} \\
+\psi_{n,i,out} &= 2\psi_{n,i,j} - \psi_{n,i,in}\:; \qquad \eta_n > 0\:\:\psi_{n,i,out} = \psi_{n,i,j+1/2}\\
+\frac{|\mu_n|}{\Delta x_i}\bigl(\psi_{n,out,j} &- \psi_{n,in,j}\bigr) + \frac{|\eta_n|}{\Delta y_i}\bigl(\psi_{n,i,out} - \psi_{n,i,in}\bigr) + \Sigma_{t,i,j} \psi_{n,i,j} = q_{n,i,j}\\
+&\\
+\psi_{n,i,j} &= \frac{q_{n,i,j} + (2|\mu_n| / \Delta x_i) \psi_{n,in,j} + (2|\eta_n| / \Delta y_j) \psi_{n,in,j}}{\Sigma_{t,i,j} + (2|\mu_n| / \Delta x_i) + (2|\eta_n| / \Delta y_j)}\\
+\phi_{l,i,j}^m &= \frac{1}{4}\sum_{n=1}^{N(N+2)/2} w_n Y_{lm}^e(\vOmega_n) \psi_{n,i,j}
+\end{align*}
+We know the incoming flux; we rearrange our balance equation, sub in our difference relations, and solve for $\psi_{n,i,j}$; accumulate our flux moments; and then we get the new outgoing fluxes that become the next incoming fluxes.\\
+
+When we have reflecting boundary conditions, we now have to find the index $n'$ such taht $\mu_{n'} = -\mu_n$ and/or $\eta_{n'} = -\eta_n$. \\
+If it's reflecting on the right face, we switch angles and sweep right to left for that row before going to the next row; conversely for any other reflecting boundary. 
+
+As before, we can get negative fluxes with certain mesh spacings.\\
+Step Characteristic is one way to ensure positivity, but at the loss of one order of convergence (becomes $O(\Delta_{ij})$).\\
+In this case we set the outgoing flux to be the cell-centered flux. \\
+Negative flux fixups, such as setting negative values to zero, have also been used. \\
+This has it's own hazards. \\
+There are a variety of spatial methods out there with different properties (linear discontinuous, tri-linear discontinuous, weighted and adaptive-weighted diamond difference, top name a few common ones). 
+
+
+Rest of course (2 classes left):\\
+- M, 11/30 (prom dress day): equation solution procedures (inner iteration, outer iteration, eigenvalue iteration, convergence); one basic solver of each type (SI, GS, PI)\\ 
+- W, 12/02: example of research into a different solver for each type (block Krylov, RQI). Last half of class will be feedback and discussion of class.
 
 
 
