--- a/nov16/Nov-16Class.tex
+++ b/nov16/Nov-16Class.tex
@@ -304,7 +304,7 @@ We can \emph{again} expand the right-hand side as a power series to get
 
 If we take terms up to $O(\ep^2)$ in the results above, simple algebraic manipulation gives
 \[
--\nabla\cdot\frac{1}{3\Sigma_t}\nabla\phi+\Sigma_{a}\phi = S,
+-\nabla\cdot\frac{1}{3\Sigma_t}\nabla\phi-\Sigma_{a}\phi = S,
 \]
 which is the second-order form of the $SP_1$ equation.
 
@@ -319,7 +319,7 @@ where
 \phi_2= \frac{2\ep^2}{15}\left(1+\frac{11\ep^2}{21}\left(\frac{1}{\Sigma_t}\nabla\right)^2\right)\left(\frac{1}{\Sigma_t}\nabla\right)^2\phi.
 \]
 
-Expanding the first operator on the right-hand side we obtain
+Expanding the first operator in parentheses on the right-hand side we obtain
 \[
 \phi_2= \frac{2\ep^2}{15}\left(1-\frac{11\ep^2}{21}\left(\frac{1}{\Sigma_t}\nabla\right)^2\right)^{-1}\left(\frac{1}{\Sigma_t}\nabla\right)^2\phi +O(\ep^5).
 \]
@@ -334,7 +334,7 @@ which is exactly the second-order form of the $SP_3$ equation for $\phi_2$ with 
 \]
 to get the first of the second-order form $SP_3$ equations:
 \[
-\nabla\cdot\frac{1}{3\Sigma_t}\nabla(\phi+2\phi_2)\Sigma_a\phi=S.
+-\nabla\cdot\frac{1}{3\Sigma_t}\nabla(\phi+2\phi_2) + \Sigma_a\phi=S.
 \]
 
 This shows that the $SP_3$ equations are a
